Fix errors using surefire-3.0.0-M6